# lora

./: .gitattributes  .gitignore  .prettierignore  .prettierrc.json  .yarnrc.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md  RELEASING.md  SECURITY.md  cliff.toml  commitlint.config.cjs  eslint.config.mjs  package-lock.json  package.json
crates/bindings/lora-binding-buffer/: Cargo.toml
crates/bindings/lora-binding-buffer/src/: lib.rs
crates/bindings/lora-ffi/: Cargo.toml
crates/bindings/lora-ffi/schema/: explain.json  profile.json
crates/bindings/lora-ffi/src/: errors.rs  json.rs  lib.rs
crates/bindings/lora-node/: .gitignore  Cargo.toml  README.md  index.d.ts  package-lock.json  package.json  tsconfig.json
crates/bindings/lora-node/bench/: README.md  before.json  last.json  report.md  run.mjs
crates/bindings/lora-node/examples/: basic.ts
crates/bindings/lora-node/src/: encode.rs  errors.rs  json.rs  lib.rs  tasks.rs  to_napi.rs
crates/bindings/lora-node/test/: database.test.ts  explain_profile.test.ts
crates/bindings/lora-node/ts/: decode.ts  index.ts  native.d.ts  native.js  types.ts
crates/bindings/lora-python/: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/bindings/lora-python/examples/: basic.py
crates/bindings/lora-python/src/: errors.rs  from_python.rs  lib.rs  to_python.rs
crates/bindings/lora-python/tests/: test_async.py  test_explain_profile.py  test_sync.py
crates/bindings/lora-ruby/: .gitignore  Cargo.toml  Gemfile  README.md  extconf.rb  lora-ruby.gemspec
crates/bindings/lora-ruby/lib/: lora_ruby.rb
crates/bindings/lora-ruby/src/: errors.rs  from_ruby.rs  gvl.rs  lib.rs  to_ruby.rs
crates/bindings/lora-ruby/test/: test_basic.rb  test_errors.rb  test_explain_profile.rb  test_params.rb  test_snapshot.rb  test_types.rb
crates/lora-analyzer/: Cargo.toml
crates/lora-analyzer/src/: analyzer.rs  errors.rs  lib.rs  resolved.rs  scope.rs  symbols.rs
crates/lora-analyzer/src/analyzer/: clauses.rs  mod.rs  (+5 more)
crates/lora-analyzer/tests/: error_messages.rs
crates/lora-ast/: Cargo.toml
crates/lora-ast/src/: ast.rs  lib.rs
crates/lora-builtins-meta/: Cargo.toml
crates/lora-builtins-meta/src/: lib.rs
crates/lora-compiler/: Cargo.toml
crates/lora-compiler/src/: lib.rs  logical.rs  optimizer.rs  pattern.rs  physical.rs  plan_tree.rs  planner.rs
crates/lora-database/: Cargo.toml
crates/lora-database/benches/: README.md  advanced.rs  advanced_benchmarks.rs  concurrency_guard.rs  concurrency_guard_benchmarks.rs  concurrent.rs  concurrent_benchmarks.rs  engine.rs  engine_benchmarks.rs  fixtures.rs  index_acceleration.rs  perf_smoke.rs  perf_smoke_baseline.json  perf_smoke_benchmarks.rs  query_implementations.rs  realistic.rs  scale.rs  scale_benchmarks.rs  temporal_spatial.rs  temporal_spatial_benchmarks.rs  wal.rs  wal_benchmarks.rs
crates/lora-database/src/: archive.rs  database.rs  durable_io.rs  error.rs  explain.rs  lib.rs  live_store.rs  named.rs  plan_cache.rs  snapshot_store.rs  stream.rs  transaction.rs
crates/lora-database/tests/: advanced_queries.rs  aggregation.rs  backend_stub.rs  binary.rs  builtin_namespaces.rs  constraints.rs  create.rs  docs_examples.rs  error_messages.rs  errors.rs  explain_profile.rs  expressions.rs  foreach.rs  fulltext_index.rs  functions_extended.rs  index_acceleration.rs  invariants.rs  managed_snapshots.rs  match.rs  merge.rs  ordering.rs  parameters.rs  parser.rs  paths.rs  projection.rs  scale.rs  schema.rs  seeds.rs  snapshot.rs  spatial.rs  temporal.rs  test_helpers.rs  transactions.rs  types_advanced.rs  union.rs  unwind_ingestion.rs  update.rs  vector_index.rs  vectors.rs  wal.rs  (+2 more)
crates/lora-executor/: Cargo.toml
crates/lora-executor/src/: errors.rs  eval.rs  executor.rs  lib.rs  profile.rs  pull.rs  value.rs
crates/lora-executor/tests/: error_messages.rs
crates/lora-node/: .gitignore  Cargo.toml  README.md  index.d.ts  package-lock.json  package.json  tsconfig.test.json  vitest.config.ts
crates/lora-node/examples/: basic.ts
crates/lora-node/src/: errors.rs  json.rs  lib.rs  tasks.rs
crates/lora-node/test/: database.test.ts
crates/lora-node/ts/: index.ts  native.d.ts  native.js  types.ts
crates/lora-parser/: Cargo.toml
crates/lora-parser/src/: cypher.pest  error.rs  errors.rs  lib.rs  parser.rs
crates/lora-parser/tests/: error_messages.rs
crates/lora-python/: Cargo.toml  README.md  build.rs  pyproject.toml
crates/lora-python/examples/: async_demo.py  basic.py
crates/lora-python/src/: errors.rs  lib.rs
crates/lora-python/tests/: test_async.py  test_sync.py
crates/lora-query-wasm/: Cargo.toml
crates/lora-query-wasm/src/: lib.rs
crates/lora-server/: Cargo.toml
crates/lora-server/examples/: mem_probe.rs  mem_probe2.rs  mem_probe3.rs
crates/lora-server/src/: app.rs  config.rs  lib.rs  main.rs
crates/lora-server/tests/: admin.rs  error_messages.rs  http.rs
crates/lora-snapshot/: Cargo.toml
crates/lora-snapshot/src/: body.rs  codec.rs  columnar.rs  envelope.rs  errors.rs  format.rs  lib.rs  options.rs  tests.rs  transform.rs  view.rs
crates/lora-snapshot/tests/: error_messages.rs
crates/lora-store/: Cargo.toml
crates/lora-store/src/: binary.rs  codec.rs  graph.rs  lib.rs  lock_table.rs  memory.rs  mutation.rs  snapshot.rs  spatial.rs  temporal.rs  traits.rs  vector.rs
crates/lora-store/tests/: error_messages.rs
crates/lora-wal/: Cargo.toml
crates/lora-wal/src/: codec.rs  config.rs  dir.rs  error.rs  errors.rs  io.rs  lib.rs  lock.rs  lsn.rs  record.rs  recorder_adapter.rs  replay.rs  segment.rs  testing.rs  wal.rs
crates/lora-wal/tests/: error_messages.rs
crates/lora-wasm/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vitest.config.ts
crates/lora-wasm/examples/: browser.html  node.ts
crates/lora-wasm/src/: json.rs  lib.rs
crates/lora-wasm/test/: database.test.ts  worker-client.test.ts
crates/lora-wasm/test-browser/: browser.spec.ts
crates/lora-wasm/ts/: index.ts  loader-node.ts  snapshot.ts  worker-client.ts  worker-protocol.ts  worker.ts
(+603 files in other folders)
