[workspace]
members = [
    "crates/lora-ast",
    "crates/lora-parser",
    "crates/lora-analyzer",
    "crates/lora-compiler",
    "crates/lora-store",
    "crates/lora-executor",
    "crates/lora-database",
    "crates/lora-server",
    "crates/lora-node",
    "crates/lora-wasm",
    "crates/lora-python",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "BUSL-1.1"
authors = ["LoraDB, Inc."]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tracing = "0"
axum = "0"
tokio = "1"
smallvec = "2.0.0-alpha.12"
pest = "2"
pest_derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
regex = "1"
tower = "0.5.3"
criterion = { version = "0.8.2", features = ["html_reports"] }
