[workspace]
members = [
    "crates/lora-ast",
    "crates/lora-parser",
    "crates/lora-analyzer",
    "crates/lora-compiler",
    "crates/lora-store",
    "crates/lora-executor",
    "crates/lora-database",
    "crates/lora-server",
    "crates/lora-node",
    "crates/lora-wasm",
    "crates/lora-python",
    "crates/lora-ffi",
    "crates/lora-ruby",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "BUSL-1.1"
authors = ["LoraDB, Inc."]
repository = "https://github.com/lora-db/lora"
homepage = "https://github.com/lora-db/lora"
rust-version = "1.87"

[workspace.dependencies]
# Internal crates — versions are kept in lockstep with [workspace.package].version
# by `scripts/sync-versions.mjs`. Both `path` and `version` are set so that
# `cargo publish` works (crates.io cannot resolve path-only deps).
lora-ast = { path = "crates/lora-ast", version = "=0.1.0" }
lora-parser = { path = "crates/lora-parser", version = "=0.1.0" }
lora-analyzer = { path = "crates/lora-analyzer", version = "=0.1.0" }
lora-compiler = { path = "crates/lora-compiler", version = "=0.1.0" }
lora-store = { path = "crates/lora-store", version = "=0.1.0" }
lora-executor = { path = "crates/lora-executor", version = "=0.1.0" }
lora-database = { path = "crates/lora-database", version = "=0.1.0" }

# External crates.
anyhow = "1"
thiserror = "2"
tracing = "0"
axum = "0"
tokio = "1"
smallvec = "2.0.0-alpha.12"
pest = "2"
pest_derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
regex = "1"
tower = "0.5.3"
criterion = { version = "0.8.2", features = ["html_reports"] }
