[workspace]
members = [
    "crates/lora-ast",
    "crates/lora-parser",
    "crates/lora-analyzer",
    "crates/lora-compiler",
    "crates/lora-store",
    "crates/lora-snapshot",
    "crates/lora-wal",
    "crates/lora-executor",
    "crates/lora-database",
    "crates/lora-server",
    "crates/bindings/lora-binding-buffer",
    "crates/bindings/lora-node",
    "crates/bindings/lora-wasm",
    "crates/bindings/lora-python",
    "crates/bindings/lora-ffi",
    "crates/bindings/lora-ruby",
    "packages/lora-query",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.11.3"
license = "BUSL-1.1"
authors = ["LoraDB, Inc."]
repository = "https://github.com/lora-db/lora"
homepage = "https://github.com/lora-db/lora"
rust-version = "1.87"

[workspace.dependencies]
# Internal crates — versions are kept in lockstep with [workspace.package].version
# by `scripts/sync-versions.mjs`. Both `path` and `version` are set so that
# `cargo publish` works (crates.io cannot resolve path-only deps).
lora-ast = { path = "crates/lora-ast", version = "=0.11.3" }
lora-parser = { path = "crates/lora-parser", version = "=0.11.3" }
lora-analyzer = { path = "crates/lora-analyzer", version = "=0.11.3" }
lora-compiler = { path = "crates/lora-compiler", version = "=0.11.3" }
lora-store = { path = "crates/lora-store", version = "=0.11.3" }
lora-snapshot = { path = "crates/lora-snapshot", version = "=0.11.3", default-features = false }
lora-wal = { path = "crates/lora-wal", version = "=0.11.3" }
lora-executor = { path = "crates/lora-executor", version = "=0.11.3", default-features = false }
lora-database = { path = "crates/lora-database", version = "=0.11.3" }
lora-binding-buffer = { path = "crates/bindings/lora-binding-buffer", version = "=0.11.3" }

# External crates.
anyhow = "1"
thiserror = "2"
tracing = "0"
axum = "0"
tokio = "1"
smallvec = "2.0.0-alpha.12"
pest = "2"
pest_derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
regex = "1"
unicode-normalization = "0.1"
tower = "0.5.3"
criterion = { version = "0.8.2", features = ["html_reports"] }
crc32fast = "1.4"
chacha20poly1305 = "0.10"
blake3 = "1"
getrandom = "0.2"
argon2 = "0.5"
flate2 = "1"
rayon = "1"
