[package]
name = "lora-analyzer"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Semantic analysis for parsed Cypher queries in LoraDB."
keywords = ["loradb", "cypher", "analyzer", "graph", "semantic"]
categories = ["compilers", "parser-implementations"]

[dependencies]
lora-ast.workspace = true
lora-store.workspace = true
lora-parser.workspace = true
thiserror.workspace = true
