[package]
name = "lora-database"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "LoraDB — embeddable in-memory graph database with Cypher query support."
keywords = ["loradb", "graph", "cypher", "database", "in-memory"]
categories = ["database-implementations", "database"]

[lib]
bench = false

[dependencies]
anyhow.workspace = true

lora-ast.workspace = true
lora-parser.workspace = true
lora-analyzer.workspace = true
lora-compiler.workspace = true
lora-executor.workspace = true
lora-store.workspace = true

serde_json.workspace = true
tower.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "engine_benchmarks"
harness = false

[[bench]]
name = "temporal_spatial_benchmarks"
harness = false

[[bench]]
name = "advanced_benchmarks"
harness = false

[[bench]]
name = "scale_benchmarks"
harness = false

[[bench]]
name = "perf_smoke_benchmarks"
harness = false
