[package]
name = "lora-database"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "LoraDB — embeddable in-memory graph database with Cypher query support."
keywords = ["loradb", "graph", "cypher", "database", "in-memory"]
categories = ["database-implementations", "database"]

[lib]
bench = false

[dependencies]
anyhow.workspace = true
arc-swap.workspace = true
chacha20poly1305.workspace = true
crc32fast.workspace = true
flate2.workspace = true
getrandom.workspace = true
thiserror.workspace = true

lora-ast.workspace = true
lora-parser.workspace = true
lora-analyzer.workspace = true
lora-compiler.workspace = true
lora-executor.workspace = true
lora-store.workspace = true
lora-snapshot.workspace = true
lora-wal.workspace = true

serde_json.workspace = true
tracing.workspace = true
tower.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "engine"
harness = false

[[bench]]
name = "temporal_spatial"
harness = false

[[bench]]
name = "advanced"
harness = false

[[bench]]
name = "realistic"
harness = false

[[bench]]
name = "scale"
harness = false

[[bench]]
name = "perf_smoke"
harness = false

[[bench]]
name = "wal"
harness = false

[[bench]]
name = "concurrent"
harness = false

[[bench]]
name = "concurrency_guard"
harness = false
