[package]
name = "lora-database"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "LoraDB — embeddable in-memory graph database with Cypher query support."
keywords = ["loradb", "graph", "cypher", "database", "in-memory"]
categories = ["database-implementations", "database"]

[lib]
bench = false

[features]
# `parallel` enables the executor's large read-only materialization path.
# It is default-on for native builds; wasm consumers can opt out with
# `default-features = false`.
default = ["parallel"]
parallel = ["lora-executor/parallel"]

[dependencies]
anyhow.workspace = true
chacha20poly1305.workspace = true
crc32fast.workspace = true
flate2.workspace = true
getrandom.workspace = true
thiserror.workspace = true

lora-ast.workspace = true
lora-parser.workspace = true
lora-analyzer.workspace = true
lora-compiler.workspace = true
lora-executor = { workspace = true, default-features = false }
lora-store.workspace = true
lora-snapshot.workspace = true
lora-wal.workspace = true

serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "query_implementations"
harness = false

[[bench]]
name = "engine"
harness = false

[[bench]]
name = "temporal_spatial"
harness = false

[[bench]]
name = "advanced"
harness = false

[[bench]]
name = "realistic"
harness = false

[[bench]]
name = "scale"
harness = false

[[bench]]
name = "perf_smoke"
harness = false

[[bench]]
name = "wal"
harness = false

[[bench]]
name = "concurrent"
harness = false

[[bench]]
name = "concurrency_guard"
harness = false

[[bench]]
name = "index_acceleration"
harness = false
