[package]
name = "lora-executor"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Query-plan executor for LoraDB's Cypher implementation."
keywords = ["loradb", "cypher", "executor", "graph", "query"]
categories = ["database-implementations", "algorithms"]

[dependencies]
lora-compiler.workspace = true
lora-store.workspace = true
lora-analyzer.workspace = true
lora-ast.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
regex.workspace = true
