[package]
name = "lora-executor"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Query-plan executor for LoraDB's Cypher implementation."
keywords = ["loradb", "cypher", "executor", "graph", "query"]
categories = ["database-implementations", "algorithms"]

[features]
default = ["parallel"]
parallel = ["dep:rayon"]

[dependencies]
lora-compiler.workspace = true
lora-store.workspace = true
lora-analyzer.workspace = true
lora-ast.workspace = true
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tracing.workspace = true
regex.workspace = true
unicode-normalization.workspace = true
blake3.workspace = true
crc32fast.workspace = true
flate2.workspace = true
getrandom.workspace = true
web-time.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = { workspace = true, optional = true }
