[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "lora-python"
version = "0.5.5"
description = "Python bindings for the Lora in-memory graph database"
readme = "README.md"
license = { text = "BUSL-1.1" }
requires-python = ">=3.8"
authors = [{ name = "LoraDB, Inc." }]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: Other/Proprietary License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Typing :: Typed",
    "Development Status :: 3 - Alpha",
]

[project.urls]
Homepage = "https://github.com/lora-db/lora"
Repository = "https://github.com/lora-db/lora"
Issues = "https://github.com/lora-db/lora/issues"

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.maturin]
# Bind the Rust cdylib as a submodule of the pure-Python package so we can
# layer an async wrapper + typing stubs on top.
module-name = "lora_python._native"
python-source = "python"
features = ["pyo3/extension-module"]
# Build a stable-ABI wheel so one build serves 3.8+.
bindings = "pyo3"
# LICENSE is copied into this directory at CI time (copy-license action)
# rather than committed, so cargo's git-tracked file list excludes it from
# the sdist. Force-include it here — without this, maturin still emits
# `License-File: LICENSE` in PKG-INFO and PyPI rejects the upload with
# "License-File LICENSE does not exist in distribution file" (PEP 639).
include = [{ path = "LICENSE", format = "sdist" }]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
