[package]
name = "lora-query-wasm"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
publish = false
description = "WASM build of the LoraDB Cypher pest parser, used by @loradb/lora-query for in-browser validation and formatting."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.100"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }

serde = { workspace = true }

lora-ast.workspace = true
lora-parser.workspace = true

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]
