[package]
name = "lora-server"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
autobenches = false

[dependencies]
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tower.workspace = true
lora-database = { path = "../lora-database" }