[package]
name = "lora-server"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "HTTP server binary for LoraDB, exposing a Cypher-over-HTTP API."
keywords = ["loradb", "graph", "database", "server", "cypher"]
categories = ["database", "database-implementations", "web-programming::http-server"]
autobenches = false

[dependencies]
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tower.workspace = true
lora-database.workspace = true
