[package]
name = "lora-store"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "In-memory graph store with property indexes for LoraDB."
keywords = ["loradb", "graph", "in-memory", "storage", "database"]
categories = ["database-implementations", "data-structures"]

[dependencies]
lora-ast.workspace = true

# Snapshot / WAL serialization. `serde` derives on the record types;
# `postcard` for the binary payload (bincode 1.x is unmaintained, and
# bincode 2.x / wincode are less battle-tested; postcard has a documented
# stable wire format and a varint encoding that keeps snapshots compact);
# `crc32fast` for the file-trailer checksum.
serde.workspace = true
postcard.workspace = true
crc32fast.workspace = true
thiserror.workspace = true

# Wall-clock reads go through the standard library on native targets and
# through `js_sys::Date::now()` on wasm32-unknown-unknown, where
# `SystemTime::now()` panics. See `temporal::unix_now`.
[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
js-sys = "0.3"
