[package]
name = "lora-wasm"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
publish = false
description = "WebAssembly bindings for the Lora in-memory graph database"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.100"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }

serde = { workspace = true }
serde_json = { workspace = true }
anyhow.workspace = true

lora-database = { path = "../lora-database" }
lora-store = { path = "../lora-store" }

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]
