[package]
name = "lora-binding-buffer"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
publish = false
description = "Shared binary result-buffer encoder used by every Lora binding."

[dependencies]
lora-database.workspace = true
lora-store.workspace = true
